fix: fix jumping img

--- a/image-gallery/assets/css/style.css
+++ b/image-gallery/assets/css/style.css
@@ -126,17 +126,13 @@ button:active path {
   text-align: center;
   color: #868686;
   font-size: 3em;
-  opacity: 0;
 }
 
 .try-again {
   text-decoration: underline;
 }
 
-.change {
-  opacity: 1;
-  transition: all 1s;
-}
+
 
 .block-img {
   position: relative;
@@ -152,7 +148,7 @@ button:active path {
   box-shadow: 0px 10px 10px #aaa;
 }
 
-.img:hover {
+.block-img:hover .img {
   transform: scale(1.2);
   transition: 1s;
   position: relative;
@@ -181,10 +177,7 @@ input::-webkit-search-results-decoration {
   display: none;
 }
 
-/* .btn-download {
-  position: relative;
-  width: 100%;
-} */
+
 
 .icon-download {
   position: absolute;
